# ocr_test2

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts  result.md
app/src/androidTest/java/com/example/ocr_test/: GoogleMlKitOcrTest.kt  MnnOcrEngineTest.kt  OCR_TEST_IMPLEMENTATION.md  OcrComparisonTest.kt  PaddleOcrOnnxTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/model/ppocrv6_mnn/: PP-OCRv6_tiny_det.mnn
app/src/main/cpp/: CMakeLists.txt  mnn_ocr_jni.cpp  ncnn_ocr_jni.cpp
app/src/main/java/com/example/ocr_test/: MainActivity.kt
app/src/main/java/com/example/ocr_test/ocr/: CTCDecoder.kt  CharDictLoader.kt  DBPostProcessor.kt  ImageProcessors.kt  MnnOcrEngine.kt  OnnxOcrEngine.kt
app/src/main/java/com/example/ocr_test/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/keepRules/: rules.keep
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
